add cumulated project Files