@@ -1,103 +1,129 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>rentasad.library</groupId>
 	<artifactId>rentasad.library.db</artifactId>
-	<name>gustini.library.db</name>
-	<url>http://maven.apache.org</url>
+	<version>D2.0.0</version>
+	<name>rentasad.library.db</name>
+	<!-- FIXME change it to the project's website -->
+	<url>http://www.example.com</url>
+	<packaging>pom</packaging>
 	<properties>
-		<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
-		<project.build.sourceEncoding>CP1252</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<!-- DEPENDENCIES VERSIONS -->
+		<maven-clean-plugin>3.1.0</maven-clean-plugin>
+		<maven-resources-plugin>3.2.0</maven-resources-plugin>
+		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
+		<maven-surefire-plugin>3.0.0-M5</maven-surefire-plugin>
+		<maven-jar-plugin>3.2.0</maven-jar-plugin>
+		<maven-install-plugin>3.0.0-M1</maven-install-plugin>
+		<maven-deploy-plugin>3.0.0-M1</maven-deploy-plugin>
+		<maven-site-plugin>3.9.1</maven-site-plugin>
+		<mavenProjectInfoReportsPlugin>3.1.2</mavenProjectInfoReportsPlugin>
+		<!-- VERSION PROPERTY -->
+		<!-- USING WITH ${basicToolParentVersion} -->
+		<basicToolParentVersion>P2.0.0</basicToolParentVersion>
+		<dbToolParentVersion>D2.0.0</dbToolParentVersion> <!--  <version>${dbToolParentVersion}</version>  -->
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<!-- <source>1.8</source> -->
-					<release>11</release>
-				</configuration>
-			</plugin>
-			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14.1</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.4.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> <scope>system</scope> <groupId>com.extendedsystems.jdbc.advantage</groupId> 
-			<artifactId>adsjdbc</artifactId> <version>11.0</version> <systemPath>${basedir}\src\lib\adsjdbc11.0.jar</systemPath> 
-			</dependency> -->
-
-		<!-- <dependency> <scope>system</scope> <groupId>com.microsoft.sqlserver</groupId> 
-			<artifactId>sqljdbc4</artifactId> <version>4.0</version> <systemPath>${basedir}\src\lib\microsoft\sqlserver\sqljdbc4\4.0\sqljdbc4-4.0.jar</systemPath> 
-			</dependency> -->
-		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc JDK 11 -->
 		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<version>9.4.0.jre11</version>
-		</dependency>
-
-
-		<!-- UPDATE 20.09.2018 Update nach Fehler in ServerTimeZone -> Fallback 
-			zu alter Version https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.16</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>2.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.5</version>
+			<groupId>rentasad</groupId>
+			<artifactId>rentasad.library.basicTools.configFileTool</artifactId>
+			<version>${basicToolParentVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.basicTools</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.configFileTool</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.extendedsystems.jdbc.advantage</groupId>
-			<artifactId>adsjdbc</artifactId>
-			<version>11.0</version>
+			<artifactId>rentasad.library.basicTools.exceptions</artifactId>
+			<version>${basicToolParentVersion}</version>
 		</dependency>
 	</dependencies>
-
-	<groupId>rentasad</groupId>
-	<version>1.1.1</version>
-	<description>30.08.2021 V1.1.1 - Switch to openJDK11 - MSSQL dependencies switch to JDK 11</description>
+	<build>
+		<pluginManagement>
+			<!-- lock down plugins versions to avoid using Maven defaults (may be 
+				moved to parent pom) -->
+			<plugins>
+				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>${maven-clean-plugin}</version>
+				</plugin>
+				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+				<plugin>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${maven-jar-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>${maven-install-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven-deploy-plugin}</version>
+				</plugin>
+				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+				<plugin>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${maven-site-plugin}</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>${maven-project-info-reports-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>flatten-maven-plugin</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<updatePomFile>true</updatePomFile>
+					</configuration>
+					<executions>
+						<execution>
+							<id>flatten</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>flatten</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>flatten.clean</id>
+							<phase>clean</phase>
+							<goals>
+								<goal>clean</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<modules>
+		<module>rentasad.library.db.mysql</module>
+		<module>rentasad.library.db.mssql</module>
+		<module>rentasad.library.db.ads</module>
+		<module>rentasad.library.db.ads2mysqlTransfer</module>
+		<module>rentasad.library.db.sqlExecutionTool</module>
+	</modules>
 </project>
